client/src/App.css
#root {
  max-width: 1280px;
  margin: 0 auto;
  padding: 2rem;
  text-align: center;
}

.logo {
  height: 6em;
  padding: 1.5em;
  will-change: filter;
  transition: filter 300ms;
}
.logo:hover {
  filter: drop-shadow(0 0 2em #646cffaa);
}
.logo.react:hover {
  filter: drop-shadow(0 0 2em #61dafbaa);
}

@keyframes logo-spin {
  from {
    transform: rotate(0deg);
  }
  to {
    transform: rotate(360deg);
  }
}

@media (prefers-reduced-motion: no-preference) {
  a:nth-of-type(2) .logo {
    animation: logo-spin infinite 20s linear;
  }
}

.card {
  padding: 2em;
}

body {
  background-color:#1a1a1a;
}

#top-bar {
  margin-bottom:10px;
  color:white;
}

#next-button {
  margin-top:10px;
}

#flag {
  margin-bottom:10px;
  border: 1px solid white;
}

#options {
  display:flex;
  flex-direction:column;
  gap:10px;
}

#leaderboard-table {
  border-spacing:30px 5px;
}

#play-leaderboard-button-container {
  display:flex;
  gap:10px;
}

#results-container {
  display:flex;
  flex-direction:column;
  align-items:center;
}

button.correct-answer:disabled {
  background-color: #2ecc71; /* Green */
  color: white;
  opacity: 1; /* Prevents the "faded" look */
}

button.incorrect-answer:disabled {
  background-color: #e74c3c; /* Red */
  color: white;
  opacity: 1;
}

